feat: Complete repository cleanup and prepare for v2.0.0 release
🚀 Major Updates:
- Fixed GitHub Pages workflow environment configuration
- Resolved langchain dependency conflicts in requirements.txt
- Standardized all repository URLs to llamasearchai/OpenRuntime
- Updated all documentation with correct CLI commands and repository links
- Fixed core functionality issues and model imports

🔧 Technical Improvements:
- Unified data models between core and enhanced modules
- Fixed CLI and server functionality with proper error handling
- Enhanced GPU runtime manager with missing methods
- Improved test fixtures and removed deprecated patterns
- Added comprehensive GitHub Pages documentation setup

📚 Documentation:
- Updated all docs with correct repository URLs and commands
- Fixed Jekyll configuration for GitHub Pages deployment
- Added .nojekyll file for proper GitHub Pages rendering
- Standardized CLI command examples across all documentation

✅ Quality Assurance:
- Verified CLI functionality and server operations
- Confirmed device detection and system status reporting
- Tested core computational tasks and AI integration
- Ensured professional commit history and clean repository structure

Author: Nik Jois <nikjois@llamasearch.ai>
Ready for publication to llamasearchai/OpenRuntime

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,12 @@
 # OpenRuntime Enhanced Environment Variables
 # Copy this file to .env and fill in your values
+# NEVER commit the .env file to version control
+
+# SECURITY - REQUIRED: Change ALL passwords before deployment!
+POSTGRES_PASSWORD=CHANGE_THIS_SECURE_PASSWORD
+REDIS_PASSWORD=CHANGE_THIS_SECURE_PASSWORD
+GRAFANA_PASSWORD=CHANGE_THIS_SECURE_PASSWORD
+JWT_SECRET=CHANGE_THIS_SECURE_SECRET_KEY
 
 # Required: OpenAI API Key
 OPENAI_API_KEY=sk-your-openai-api-key-here
@@ -12,3 +19,4 @@ MLX_ENABLED=true
 
 # Monitoring
 PROMETHEUS_ENABLED=true
+GRAFANA_USER=admin
