--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,7 +4,7 @@
 # =============================================================================
 
 # Testing Framework
-pytest==7.2.0
+pytest>=7.4.0
 pytest-asyncio>=0.21.0
 pytest-cov>=4.1.0
 pytest-mock>=3.11.0
@@ -48,7 +48,7 @@ pip-audit>=2.6.0
 
 # API Testing and Documentation
 swagger-ui-bundle>=0.1.2
-redoc>=2.1.0
+
 openapi-spec-validator>=0.6.0
 
 # Development Utilities
@@ -85,7 +85,7 @@ websockets>=11.0.0
 python-multipart>=0.0.6
 
 # Configuration Management
-pydantic[email]>=2.1.0
+pydantic[email]==1.10.14
 pyyaml>=6.0.0
 toml>=0.10.0
 
