--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,6 +5,9 @@ on:
     tags:
       - 'v*'
 
+permissions:
+  contents: read
+
 env:
   PYTHON_VERSION: "3.11"
   REGISTRY: ghcr.io
@@ -46,9 +49,11 @@ jobs:
 
   # =============================================================================
   # Security Scan
-  # =============================================================================
+  # =================================com=============================================
   security:
     runs-on: ubuntu-latest
+    permissions:
+      security-events: write
     steps:
     - uses: actions/checkout@v4
     
@@ -73,7 +78,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, security]
     permissions:
-      contents: read
       packages: write
     
     steps:
@@ -194,6 +198,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: [test, security]
     if: startsWith(github.ref, 'refs/tags/v')
+    permissions:
+      id-token: write
     
     steps:
     - uses: actions/checkout@v4
@@ -223,6 +229,8 @@ jobs:
   update-docs:
     runs-on: ubuntu-latest
     needs: [create-release]
+    permissions:
+      contents: write
     
     steps:
     - uses: actions/checkout@v4
