--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,6 @@ dependencies = [
     "openai>=1.35.0",
     "langchain",
     "langchain-openai",
-    "llm>=0.26.0",
     "aiofiles>=23.0.0",
     "numpy>=1.24.0",
     "pandas>=2.0.0",
@@ -73,16 +72,12 @@ ml = [
     "seaborn>=0.12.0",
 ]
 mlx = [
-    "mlx>=0.0.6; platform_machine=='arm64'",
-    "llm-mlx>=0.1.0; platform_machine=='arm64'",
+    "mlx>=0.0.6; platform_machine=='arm64'"
 ]
 onnx = [
     "onnxruntime>=1.16.0",
-    "llm-embed-onnx>=0.1.0",
 ]
-ollama = [
-    "llm-ollama>=0.3.0",
-]
+ollama = []
 database = [
     "sqlalchemy>=2.0.0",
     "alembic>=1.12.0",
