--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "fastapi>=0.104.0",
     "uvicorn[standard]>=0.24.0",
     "pydantic==1.10.14",
-    "httpx>=0.25.0",
+    "httpx>=0.25.0,<0.28",
     "websockets>=11.0.0",
     "openai>=1.35.0",
     "langchain",
